--- a/app/src/main/res/layout/fragment_meetup_detail.xml
+++ b/app/src/main/res/layout/fragment_meetup_detail.xml
@@ -15,16 +15,15 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:background="@color/white">
+            android:background="@color/black">
 
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="0dip"
-                android:layout_weight="0.7"
+                android:layout_weight="0.9"
                 android:id="@+id/meetupImageView"
                 android:src="@drawable/meetup"
                 android:scaleType="fitCenter"
-                android:layout_gravity="center"
                 android:layout_margin="10dp"
                 />
 
@@ -32,12 +31,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dip"
                 android:text="GroupName"
-                android:layout_weight="0.2"
+                android:layout_weight="0.3"
                 android:id="@+id/meetupNameTextView"
-                android:textColor="@color/black"
+                android:textColor="@color/white"
                 android:textStyle="bold"
-                android:gravity="center_horizontal"
-                android:textSize="22sp"
+                android:gravity="center"
+                android:textSize="23sp"
                 android:textIsSelectable="false" />
         </LinearLayout>
     </LinearLayout>
@@ -75,11 +74,13 @@
                     android:id="@+id/organizerTextView"
                     android:textColor="@color/darkBlue"
                     android:textStyle="bold"
+                    android:lines="4"
+                    android:layout_toRightOf="@+id/descriptionTextView"
+                    android:background="@drawable/blue_border_top"
                     android:layout_alignParentRight="true"
                     android:layout_alignParentEnd="true"
-                    android:lines="4"
-                    android:layout_toRightOf="@+id/descriptionTextView" android:layout_toEndOf="@+id/descriptionTextView"
-                    android:background="@color/white" />
+                    android:textAlignment="center"
+                    android:textSize="15sp" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -87,7 +88,7 @@
                 android:text="Brunch, American"
                 android:id="@+id/cityTextView"
                 android:textColor="@color/black"
-                android:textStyle="italic"
+                android:textStyle="bold"
                 android:layout_above="@+id/websiteTextView"
                 android:layout_toRightOf="@+id/descriptionTextView"
                 android:layout_below="@+id/organizerTextView"
@@ -95,7 +96,9 @@
                 android:layout_alignLeft="@+id/organizerTextView"
                 android:layout_alignRight="@+id/organizerTextView"
                 android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true" />
+                android:layout_alignParentEnd="true"
+                android:textAlignment="center"
+                android:textSize="15sp" />
 
             <TextView
                 android:layout_width="0dip"
@@ -113,7 +116,8 @@
                 android:layout_alignLeft="@+id/cityTextView"
                 android:layout_alignRight="@+id/cityTextView"
                 android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true" />
+                android:layout_alignParentEnd="true"
+                android:textAlignment="center" />
 
         </RelativeLayout>
     </LinearLayout>
