--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -30,7 +30,7 @@
 
     <EditText
         android:layout_width="wrap_content"
-        android:layout_height="125dp"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
         android:textAppearance="?android:attr/textAppearanceMedium"
