create landscape views for login and findSupport xml files

--- a/app/src/main/res/layout-land/fragment_meetup_detail.xml
+++ b/app/src/main/res/layout-land/fragment_meetup_detail.xml
@@ -30,6 +30,8 @@
             android:id="@+id/meetupImageView"
             android:src="@drawable/meetup"
             android:scaleType="fitCenter"
+            android:layout_marginRight="5dp"
+            android:layout_marginLeft="5dp"
             android:layout_centerVertical="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
