--- a/app/src/main/res/layout/activity_manifest.xml
+++ b/app/src/main/res/layout/activity_manifest.xml
@@ -5,13 +5,11 @@
     android:layout_height="fill_parent"
     android:background="@color/black" >
 
-    <ListView
-        android:layout_height="465dp"
-        android:id="@+id/visionListView"
-        android:layout_width="fill_parent"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        />
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/visionRecyclerView"
+        android:layout_above="@+id/supportButton" />
 
     <Button
         android:layout_width="match_parent"
@@ -19,6 +17,7 @@
         android:text="Find Support (via Meetup)"
         android:id="@+id/supportButton"
         android:layout_alignParentBottom="true"
+        android:layout_margin="5dp"
         android:background="@color/orange" />
 
 </RelativeLayout>
