--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -4,13 +4,23 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/itemTextView"
+        android:id="@+id/visionTextView"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:text="TextView"
         android:background="@color/yellow"
         android:textSize="30sp"
         android:textColor="@color/black" />
+
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Done"
+        android:id="@+id/doneButton"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
 
 </RelativeLayout>
