--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -6,18 +6,6 @@
     tools:context=".main_ui.StartActivity">
 
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/achievements"
-        android:id="@+id/achieveButton"
-        android:layout_alignParentTop="true"
-        android:background="@color/yellow"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
@@ -36,9 +24,9 @@
         android:text="@string/gentle_resolve"
         android:id="@+id/textView2"
         android:textAlignment="center"
+        android:layout_marginTop="50dp"
         android:textStyle="bold"
         android:textSize="45sp"
-        android:layout_below="@+id/achieveButton"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:textColor="@color/orange"
