Place when label correctly in activity_create

--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -28,6 +28,21 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Set A Goal: &quot;I will...&quot;"
+
+        android:id="@+id/labelGoal"
+        android:background="@color/yellow"
+        android:textSize="20sp"
+        android:layout_alignParentTop="true"
+        android:layout_alignLeft="@+id/vision"
+        android:layout_alignStart="@+id/vision"
+        android:layout_marginTop="36dp"
+        android:layout_alignRight="@+id/vision"
+        android:layout_alignEnd="@+id/vision" />
+
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -48,16 +63,107 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Set A Goal: &quot;I will...&quot;"
-        
-        android:id="@+id/textView"
+        android:text="Why?"
+        android:id="@+id/labelWhy"
         android:background="@color/yellow"
         android:textSize="20sp"
         android:layout_alignParentTop="true"
-        android:layout_alignLeft="@+id/vision"
-        android:layout_alignStart="@+id/vision"
+        android:layout_alignLeft="@+id/why1"
+        android:layout_alignStart="@+id/why1"
         android:layout_marginTop="36dp"
+        android:layout_alignRight="@+id/labelGoal"
+        android:layout_alignEnd="@+id/labelGoal" />
+
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="" android:background="@drawable/blue_border"
+        android:id="@+id/why1"
+
+        android:singleLine="true"
+        android:imeOptions="actionDone"
+        android:layout_alignBaseline="@+id/why3"
+        android:layout_alignBottom="@+id/why3"
+        android:layout_alignLeft="@+id/labelHow"
+        android:layout_alignStart="@+id/labelHow" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="" android:background="@drawable/blue_border"
+        android:id="@+id/why2"
+        android:singleLine="true"
+        android:imeOptions="actionDone"
+        android:layout_alignBelow="id/why1"
+        android:layout_above="@+id/why3"
         android:layout_alignRight="@+id/vision"
         android:layout_alignEnd="@+id/vision" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="" android:background="@drawable/blue_border"
+        android:id="@+id/why3"
+        android:layout_marginTop="49dp"
+        android:singleLine="true"
+        android:imeOptions="actionDone"
+        android:layout_alignBelow="id/why2"
+        android:layout_below="@+id/labelWhy"
+        android:layout_alignLeft="@+id/labelHow"
+        android:layout_alignStart="@+id/labelHow"
+        android:layout_toLeftOf="@+id/why2"
+        android:layout_toStartOf="@+id/why2" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Set A Goal: &quot;I will...&quot;"
+        android:id="@+id/labelHow"
+        android:background="@color/yellow"
+        android:textSize="20sp"
+        android:layout_alignParentTop="true"
+        android:layout_alignLeft="@+id/how"
+        android:layout_alignStart="@+id/how"
+        android:layout_marginTop="36dp"
+        android:layout_alignRight="@+id/how"
+        android:layout_alignEnd="@+id/how" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="" android:background="@drawable/blue_border"
+        android:id="@+id/how" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="When"
+        android:id="@+id/labelWhen"
+        android:background="@color/yellow"
+        android:textSize="20sp"
+        android:layout_above="@+id/when"
+        android:layout_toRightOf="@+id/labelHow"
+        android:layout_alignRight="@+id/when"
+        android:layout_alignEnd="@+id/when" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="" android:background="@drawable/blue_border"
+        android:id="@+id/when"
+        android:singleLine="true"
+        android:imeOptions="actionDone"
+        android:layout_above="@+id/manifestButton"
+        android:layout_toRightOf="@+id/labelHow"
+        android:layout_alignRight="@+id/why2"
+        android:layout_alignEnd="@+id/why2" />
 
 </RelativeLayout>
