--- a/app/src/main/res/layout-land/activity_start.xml
+++ b/app/src/main/res/layout-land/activity_start.xml
@@ -23,7 +23,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/gentle_resolve"
-        android:id="@+id/textView2"
+        android:id="@+id/labelWhy"
         android:textAlignment="center"
         android:textStyle="bold"
         android:textSize="45sp"
@@ -40,7 +40,7 @@
         <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="fill_parent"
-                android:layout_below="@+id/textView2"
+                android:layout_below="@+id/labelWhy"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
