--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -34,7 +34,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/gentle_resolve"
-        android:id="@+id/textView2"
+        android:id="@+id/labelWhy"
         android:textAlignment="center"
         android:layout_marginTop="50dp"
         android:textStyle="bold"
